--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -671,6 +671,14 @@ button{
   margin-bottom: 0.5rem;
 }
 
+.show-hide-btn-call-manager{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  span{
+    font-size: 2rem;
+  }  
+}
 
 
 
