--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1490,6 +1490,7 @@ Program Manager Tab
   height:  -moz-calc(100% - 2.5rem);
   height:  -webkit-calc(100% - 2.5rem);
   height:  calc(100% - 2.5rem);
+  border-top: 1px solid #aaa;
 }
 
 li.artists-selector-container-call-manager{
@@ -1503,6 +1504,24 @@ li.artists-selector-container-call-manager{
   .select2-container--default .select2-selection--single .select2-selection__arrow{
     height: 2.5rem;
   }
+}
+
+.scrollers-call-managers{
+  display: inline-block;
+  position: absolute;
+  left: -2px;
+  top: -15px;
+}
+
+.navigation-btn-icon{
+  font-size: 2rem;
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
+}
+
+.selectors-call-manager{
+  position: relative;
+  margin-left: 5rem;
 }
 
 /*===============================================
