--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -673,10 +673,10 @@ button{
 
 .show-hide-btn-call-manager{
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -3px;
+  bottom: 6px;
   span{
-    font-size: 2rem;
+    font-size: 1.4rem;
   }  
 }
 
