refactored permanent cards... problem with css in columns

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1638,7 +1638,7 @@ li.artists-selector-container-call-manager{
 }
 
 .space-column-call-manager{
-  display: inline-block !important;
+  display: inline-block;
   width: 11rem;
   border: 1px solid;
   /* overflow-y: hidden; */
