--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1277,7 +1277,7 @@ a.dt-button:active{
     border: none;
 }
 
-.table-box-call-manager-page a.dt-button{
+a.dt-button{
   @extend .pard-btn;
   padding: 0.1rem 0.4rem;
   font-size: $smallSize;
@@ -1716,6 +1716,30 @@ li.artists-selector-container-call-manager{
 .column-space-program-call-manager.column-short_description {
   /* width: 10rem; */
   width: 210px;
+}
+
+/* .day-row-program-table-call-manager{
+  font-weight: bold;
+  color: white;
+} */
+
+.day-row-program-table-call-manager td{
+  background: $grey-4;
+  font-weight: bold;
+  color: white;
+}
+
+.permanent-row-program-table-call-manager td{
+  background: $grey-2;
+  font-weight: bold;
+  /* color: white; */
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+tr.permanent-row-program-table-call-manager td{
+  padding-bottom: 0.1rem !important;
+  padding-top: 0.1rem !important;
 }
 
 
