--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1607,9 +1607,9 @@ li.artists-selector-container-call-manager{
   display: block;
 }
 
-.dragged-card-call-manager:hover{
+/*.dragged-card-call-manager:hover{
   z-index: 999 !important;
-}
+}*/
 
 
 .proposal-title-card-call-manager{
