added some style to pdf table

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1742,6 +1742,19 @@ tr.permanent-row-program-table-call-manager td{
   padding-top: 0.1rem !important;
 }
 
+.space-program-popup-call-manager div.dt-buttons{
+  float: right;
+  margin-right: 2rem;
+  top: -0.5rem;
+}
+
+.info-box-popup-program{
+  font-size: 1rem;
+  p{
+    margin-bottom: 0.5rem;
+  }
+}
+
 
 /*===============================================
 ORGANIZATION PAGE
