available/not available space filter - create own proposal reload program table - delete own proposal reload page - css cursor when grabbing space call - sent proposal popup corrected

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1494,6 +1494,7 @@ Program Manager Tab
 
 .artist-list-container-call-manager{
   overflow-y: scroll;
+  overflow-x: hidden;
   height:  -moz-calc(100% - 2.5rem);
   height:  -webkit-calc(100% - 2.5rem);
   height:  calc(100% - 2.5rem);
