fitInBox changed for title proposal and name space to cutString

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1662,7 +1662,7 @@ li.artists-selector-container-call-manager{
 
 .dragged-card-call-manager{
   white-space: normal;
-  cursor:grab;
+  /* cursor:grab; */
   position: absolute;
 }
 
