hover set on scrollers

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1544,6 +1544,10 @@ li.artists-selector-container-call-manager{
   color:rgba(0, 0, 0, 0.8);
 }
 
+.scrollers-call-managers button:hover{
+  color: rgba(0, 0, 0, 0.8);
+}
+
 .selectors-call-manager{
   position: relative;
   margin-bottom: 1.5rem;
