new functionality to table program

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -689,6 +689,14 @@ button{
   vertical-align: middle;
 }
 
+.out-of-program-btn{
+    right: 8px;
+    position: absolute;
+    font-size: 12px;
+    padding: 0.3rem;
+    top: 11rem;
+}
+
 
 /*===============================================
 COMPONENTS
