--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1590,7 +1590,7 @@ li.artists-selector-container-call-manager{
   font-size: 0.875rem;
   position: absolute;
   left: 0.6rem;
-  top: 6rem;
+  top: 13rem;
   height: 2.5rem;
   z-index: 1;  
 }
@@ -1706,6 +1706,11 @@ li.artists-selector-container-call-manager{
   width: 100px;
 }
 
+.column-table-program-call-manager.column-category, .column-table-program-call-manager.column-space_category{
+  /* width: 4rem; */
+  width: 65px;
+}
+
 .column-space-program-call-manager.column-time,.column-space-program-call-manager.column-phone, .column-artist-program-call-manager.column-time, .column-artist-program-call-manager.column-phone {
   /* width: 3rem; */
   max-width: 105px;
@@ -1727,6 +1732,11 @@ li.artists-selector-container-call-manager{
   width: 210px;
 }
 
+.column-table-program-call-manager.column-short_description {
+  /* width: 10rem; */
+  width: 190px;
+}
+
 .column-artist-program-call-manager.column-title,.column-space-program-call-manager.column-title{
   /* width: 10rem; */
   width: 170px;
@@ -1734,11 +1744,11 @@ li.artists-selector-container-call-manager{
 
 
 th.column-table-program-call-manager.column-title, th.column-table-program-call-manager.column-comments{
-  width: 145px !important;
+  width: 130px !important;
 }
 
  th.column-table-program-call-manager.column-artist, th.column-table-program-call-manager.column-space{
-  width: 115px !important;
+  width: 110px !important;
 }
 
 
@@ -1746,7 +1756,7 @@ th.column-table-program-call-manager.column-confirmed {
   width: 80px !important;
 }
  th.column-table-program-call-manager.column-time, th.column-table-program-call-manager.column-day{
-  width: 55px !important;
+  width: 53px !important;
 }
 
 
