new event_page_program file with new tagging

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1711,6 +1711,11 @@ li.artists-selector-container-call-manager{
   width: 65px;
 }
 
+.column-table-program-call-manager.column-space_number{
+  /* width: 4rem; */
+  width: 50px;
+}
+
 .column-space-program-call-manager.column-time,.column-space-program-call-manager.column-phone, .column-artist-program-call-manager.column-time, .column-artist-program-call-manager.column-phone {
   /* width: 3rem; */
   max-width: 105px;
