--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -698,6 +698,12 @@ button{
 }
 
 
+
+.button-activated-event-page{
+  color: red;
+}
+
+
 /*===============================================
 COMPONENTS
 ================================================*/
