--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -703,6 +703,14 @@ button{
   color: red;
 }
 
+.interaction-btn-event-page{
+  width: 30%;
+  display: inline-block;
+  border: solid black;
+  background: white;
+  height: 2rem;
+}
+
 
 /*===============================================
 COMPONENTS
