--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2063,6 +2063,7 @@ EVENT PAGE
   /* background:  white; */
   padding: 1rem 3.8rem 0 3.8rem;
   width: 45rem;
+  margin-bottom: 1.5rem;
 }
 
 .event-page-aside{
@@ -2083,3 +2084,11 @@ EVENT PAGE
 .day-selector-container-event-page span.select2-container{
   margin-top: -3px;
 }
+
+.title-program-event-page{
+  margin-top: .5rem;
+  margin-bottom: 1.5rem;
+  color:   $grey-4;
+  /* text-align: center; */
+}
+
