--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -99,6 +99,7 @@ a.profileCard:hover{
 
 .whole-container {
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
     max-height: 100%;
     display: block;
